--- a/app/templates/_manifest.cfg
+++ b/app/templates/_manifest.cfg
@@ -1,8 +1,8 @@
 [theme]
 title = <%= _.slugify(themeName) %> Theme
 description = Diazo theme for <%= _.slugify(themeName) %> site
-rules = /++theme++<%= _.slugify(themeName) %>/rules.xml
-prefix = /++theme++<%= _.slugify(themeName) %>
+rules = /++theme++<%= _.slugify(themeName) %>.sitetheme/rules.xml
+prefix = /++theme++<%= _.slugify(themeName) %>.sitetheme
 doctype = <!DOCTYPE html>
 
 [theme:parameters]
