Update generator layouts
- support './app' subdirectory
- remove less support
- update dependencies

--- a/app/templates/_manifest.cfg
+++ b/app/templates/_manifest.cfg
@@ -5,5 +5,14 @@ rules = /++theme++<%= _.slugify(themeName) %>.sitetheme/rules.xml
 prefix = /++theme++<%= _.slugify(themeName) %>.sitetheme
 doctype = <!DOCTYPE html>
 
+enabled-bundles =
+disabled-bundles =
+
+development-css = /++theme++<%= _.slugify(themeName) %>.sitetheme/less/styles.less
+production-css = /++theme++<%= _.slugify(themeName) %>.sitetheme/dist/styles/<%= _.slugify(themeName) %>.css
+
+development-js = /++theme++<%= _.slugify(themeName) %>.sitetheme/dist/scripts/main.js
+production-js =
+
 [theme:parameters]
 ajax_load = python: request.form.get('ajax_load')
