--- a/app/templates/_config.yml
+++ b/app/templates/_config.yml
@@ -1,13 +1,15 @@
 # Dependencies
 markdown:         rdiscount
-pygments:         true
+highlighter:      pygments
 
 # Permalinks
 permalink:        pretty
 
 # Server
+source:           ./app
 destination:      ./_site
-exclude:          [".editorconfig", ".gitignore", ".bowerrc", "jshintrc", "bower.json", "config.json", "Gruntfile.js", "package.json", "manifest.cfg", "rules.xml", "node_modules", "bower_components", "README.md", "assets", "less", "dist", "js", "overrides", "docs", "templates", "Makefile"]
+layouts:          ./_layouts
+exclude:          [".editorconfig", ".gitignore", ".bowerrc", "jshintrc", "bower.json", "config.json", "Gruntfile.js", "gulpfile.babel.js", "package.json", "manifest.cfg", "rules.xml", "node_modules", "bower_components", "README.md", "assets", "less", "dist", "js", "overrides", "docs", "templates", "Makefile", "sass"]
 port:             9001
 
 # Custom vars
