--- a/app/templates/_manifest.cfg
+++ b/app/templates/_manifest.cfg
@@ -8,8 +8,8 @@ doctype = <!DOCTYPE html>
 enabled-bundles =
 disabled-bundles =
 
-development-css = /++theme++<%= _.slugify(themeName) %>.sitetheme/less/styles.less
-production-css = /++theme++<%= _.slugify(themeName) %>.sitetheme/dist/styles/<%= _.slugify(themeName) %>.css
+development-css = /++theme++<%= _.slugify(themeName) %>.sitetheme/dist/styles/<%= _.slugify(themeName) %>.css
+production-css =
 
 development-js = /++theme++<%= _.slugify(themeName) %>.sitetheme/dist/scripts/main.js
 production-js =
