--- a/app/templates/_manifest.cfg
+++ b/app/templates/_manifest.cfg
@@ -12,7 +12,7 @@ development-css = /++theme++<%= _.slugify(themeName) %>.sitetheme/dist/styles/<%
 production-css =
 
 development-js = /++theme++<%= _.slugify(themeName) %>.sitetheme/dist/scripts/main.js
-production-js =
+production-js = /++theme++<%= _.slugify(themeName) %>.sitetheme/dist/scripts/main.js
 
 [theme:parameters]
 ajax_load = python: request.form.get('ajax_load')
